# neural-graphics-model-gym

./: .blocklint  .dockerignore  .editorconfig  .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  build_docker_image.sh  build_version.py  pyproject.toml  version.py
LICENSES/: LicenseRef-BSD-ExecuTorch.txt  MIT.txt
docs/: adding-custom-models-and-datasets.md  monitoring-and-profiling.md  nss_dataset_specification.md  setup.md  testing.md  troubleshooting.md  usage.md
docs/nfru/: nfru_configuration.md  nfru_data_generation.md  nfru_dataset_specification.md
docs/nss/: nss_configuration.md  nss_data_capture_guide.md  nss_data_generation.md  nss_dataset_specification.md
scripts/: evaluate_coverage_report.py  generate_config_schema.py  run_scenario.py
scripts/optical_flow/: README.md  argmin_centered.py  blockmatch_v32.py  down_sampling_2d.py  optical_flow_example.py
scripts/optical_flow_example/: README.md  optical_flow_example.py
scripts/safetensors_generator/: dataset_reader.py  exr_utils.py  fsr2_methods.py  safetensor_truncate.py  safetensors_writer.py
scripts/safetensors_generator/dataset_readers/: __init__.py  blockmatch_v3.py  crop_safetensors.py  flow_ops.py  nfru_exr_dataset_reader.py  nss_exr_dataset_reader.py  safetensors_feature_iterator.py
scripts/utils/: clean.py  dds_utils.py  run_blocklint.py  run_pylint.py  run_usecase_tests.py
src/ng_model_gym/: __init__.py  __main__.py  _version.py  api.py  cli.py  dataloader.py  evaluator.py  trainer.py
src/ng_model_gym/core/: dataloader.py  evaluator.py  history_buffer.py  trainer.py
src/ng_model_gym/core/config/: config_model.py  config_utils.py  custom_template.json  schema_config.json
src/ng_model_gym/core/data/: __init__.py  data_utils.py  dataloader.py  dataset_registry.py  utils.py
src/ng_model_gym/core/evaluator/: __init__.py  evaluator.py  metrics.py
src/ng_model_gym/core/export/: model_export.py
src/ng_model_gym/core/loss/: __init__.py  losses.py
src/ng_model_gym/core/model/: __init__.py  base_ng_model.py  base_ng_model_wrapper.py  checkpoint_loader.py  dense_warp_utils.py  graphics_utils.py  model.py  model_factory.py  model_registry.py  model_tracer.py  recurrent_model.py
src/ng_model_gym/core/optimizers/: __init__.py  adam.py  adam_w.py  lars_adam.py  optimizer_wrapper.py  utils.py
src/ng_model_gym/core/quantization/: __init__.py  observers.py
src/ng_model_gym/core/repos/: __init__.py  base_model_server.py  huggingface_model_server.py  remote_model_manager.py
src/ng_model_gym/core/schedulers/: __init__.py  lr_scheduler.py
src/ng_model_gym/core/trainer/: __init__.py  trainer.py
src/ng_model_gym/core/utils/: checkpoint_utils.py  config_model.py  config_utils.py  dds_utils.py  directory_utils.py  enum_definitions.py  export_utils.py  general_utils.py  gpu_log_decorator.py  json_reader.py  logging.py  logging_utils.py  memory_log_decorator.py  registry.py  system_usage_decorators.py  torch_utils.py  types.py
src/ng_model_gym/nss/: evaluators.py  history_buffer.py  losses.py
src/ng_model_gym/nss/configs/: default.json  default.json.license  schema_config.json
src/ng_model_gym/nss/dataloader/: health_check.py  process_functions.py  utils.py
src/ng_model_gym/nss/model/: graphics_utils.py  model.py  model_blocks.py  model_v1.py  post_processing.py  pre_processing.py  recurrent_model.py
src/ng_model_gym/optimization/quantization/: observers.py
src/ng_model_gym/usecases/: __init__.py
src/ng_model_gym/usecases/nss/: evaluators.py  losses.py  metrics.py  nss_evaluator.py
src/ng_model_gym/utils/: checkpoint_utils.py  config_model.py  config_utils.py  executorch_patcher.py  export_utils.py  exr_utils.py  general_utils.py  gpu_log_decorator.py  logging.py  tensor_types.py  time_decorator.py  types.py
tests/: __init__.py  base_gpu_test.py  conftest.py  fetch_huggingface.py  pkgutil_patch.py  run_tests.py  testing_utils.py
tests/core/export/: test_executorch_integration.py
tests/core/integration/: test_CLI.py  test_api.py  test_cli_dataset_validation_integration.py  test_config_integration.py
tests/core/unit/: test_folder_structure.py  test_history_buffer.py  test_version.py
tests/core/unit/data/: test_dataloader.py  test_dataset_factory.py  test_dataset_registry.py  test_health_check.py
tests/core/unit/evaluator/: test_evaluators.py  test_metrics.py
tests/core/unit/loss/: test_losses.py
tests/core/unit/model/: test_base_ng_model_qat.py  test_dense_warp.py  test_dense_warp_utils.py  test_down_sampling_2d.py  test_graphics_utils.py  test_model_factory.py  test_model_registry.py  test_model_tracer.py  test_remote_model_manager.py  (+3 more)
tests/datasets/test_exr/: 0002_camcut.json  0002_camcut.json.license
tests/datasets/test_nss_exr/: 0002.json
tests/nss/export/: test_executorch_integration.py
tests/nss/integration/: base_integration.py  test_CLI.py  test_api.py  test_dataloader.py  test_eval_integration.py  test_qat_integration.py  test_train_integration.py
tests/nss/unit/: test_autoencoder.py  test_dense_warp.py  test_dense_warp_utils.py  test_down_sampling_2d.py  test_graphics_utils.py  test_health_check.py  test_history_buffer.py  test_losses.py  test_metrics.py  test_model_v1.py  test_nss_checkpoints.py  test_nss_evaluator.py  test_post_processing.py  test_pre_processing.py  test_process_functions.py  test_recurrent_model.py  test_trainer.py  test_up_sampling_2d.py  test_zero_upsampling.py
tests/scripts/: test_config.py  test_dds_utils.py  test_exr_utils.py  test_flow_ops.py  test_safetensors_writer.py
tests/unit/: test_base_ng_model_qat.py  test_evaluators.py  test_init_config_file.py  test_lr_schedules.py
tests/unit/test_scripts/: test_config.py  test_safetensors_writer.py
tests/unit/utils/: test_dataset_registry.py  test_dds_utils.py  test_export_utils.py  test_exr_utils.py  test_general_utils.py  test_gpu_log_decorator.py  test_logging.py  test_memory_log_decorator.py  test_model_registry.py  test_registry.py  test_time_decorator.py  utils.py
(+223 files in other folders)
