# SPDX-FileCopyrightText: <text>Copyright 2025-2026 Arm Limited and/or
# its affiliates <open-source-office@arm.com></text>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling>=1.18", "packaging>=24.0", "versioningit>=3.3.0"]
build-backend = "hatchling.build"

[project]
name = "ng-model-gym"
dynamic = ["version"]
description = "Neural Graphics Model Gym for training and evaluating neural graphics models."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10, <3.13"
authors = [
    { name = "Arm Limited" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "gpustat==1.1.1",
    "gputil==1.4.0",
    "huggingface-hub==0.34.3",
    "lpips==0.1.4",
    "memory-profiler==0.61.0",
    "numpy==2.0.0",
    "openexr==3.3.3",
    "pillow==10.2.0",
    "psutil==5.9.8",
    "pydantic==2.10.4",
    "requests==2.32.3",
    "rich==13.9.3",
    "safetensors==0.5.3",
    "slangtorch==1.3.11",
    "tensorboard==2.17.1",
    "torcheval==0.0.7",
    "torchmetrics==1.7.0",
    "torch==2.9.0 ; platform_system == 'Linux'" ,
    "torch @ https://download.pytorch.org/whl/cu128/torch-2.9.0%2Bcu128-cp310-cp310-win_amd64.whl ; python_version=='3.10' and platform_system == 'Windows'",
    "torch @ https://download.pytorch.org/whl/cu128/torch-2.9.0%2Bcu128-cp311-cp311-win_amd64.whl ; python_version=='3.11' and platform_system == 'Windows'",
    "torch @ https://download.pytorch.org/whl/cu128/torch-2.9.0%2Bcu128-cp312-cp312-win_amd64.whl ; python_version=='3.12' and platform_system == 'Windows'",
    "torchvision==0.24.0; platform_system == 'Linux'",
    "torchvision @ https://download.pytorch.org/whl/cu128/torchvision-0.24.0%2Bcu128-cp310-cp310-win_amd64.whl ; python_version=='3.10' and platform_system == 'Windows'",
    "torchvision @ https://download.pytorch.org/whl/cu128/torchvision-0.24.0%2Bcu128-cp311-cp311-win_amd64.whl ; python_version=='3.11' and platform_system == 'Windows'",
    "torchvision @ https://download.pytorch.org/whl/cu128/torchvision-0.24.0%2Bcu128-cp312-cp312-win_amd64.whl ; python_version=='3.12' and platform_system == 'Windows'",
    "executorch==1.0.0",
    "tosa_serialization_lib @ git+https://git.gitlab.arm.com/tosa/tosa-serialization.git@6454bc0f",
    "ml-dtypes==0.5.1",
    "torchao==0.14.0",
    "tqdm==4.66.0",
    "typer==0.15.4",
    "ai-ml-sdk-model-converter==0.7.0",
    "pyiqa==0.1.14.1",
]

[project.optional-dependencies]
static-analysis = [
    "autoflake==2.3.1",
    "bandit==1.7.6",
    "black==23.12.1",
    "blocklint==0.2.4",
    "isort==5.13.2",
    "pylint==3.0.1",
    "reuse==3.0.1",
]
dev = [
    "coverage==7.3.2",
    "expecttest==0.3.0",
    "hatch==1.16.2",
    "jsonref==1.1.0",
    "pre-commit==3.6.0",
    "pytest==8.4.2",
    "pytest-cov==5.0.0",
    "ng-model-gym[static-analysis]",
]

[project.urls]
Homepage = "https://www.arm.com"
Repository = "https://github.com/arm/neural-graphics-model-gym"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.tag2version]
method = { module = "version", value = "normalise_tag" }

[tool.versioningit.format]
distance = "{base_version}+{rev}" # ahead of the tag, append the commit hash
dirty = "{base_version}+dirty"
distance-dirty = "{base_version}+{rev}.dirty"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/ng_model_gym"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/ng_model_gym"
]

[project.scripts]
# Name of variable is the name of the CLI program
ng-model-gym = "ng_model_gym.cli:main"
model-converter  = "ng_model_gym.bin.model_converter_launcher:main"

[tool.isort]
profile = "black"
known_third_party = ["torch"]
known_first_party = ["ng_model_gym", "tests"]
force_sort_within_sections = false
order_by_type = false
lines_between_types = 0

[tool.autoflake]
exclude = ["./venv", "./build", "./checkpoints", "./data", "./dist", "./output"]

[tool.bandit]
exclude_dirs = [
    "build",
    "dist",
    "tests",
    "__pycache__",
    "data",
    "directory_env",
    "venv",
]

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[tool.pylint.MASTER]
init-hook = "import os, sys; sys.path.insert(0, os.getcwd()); sys.path.insert(0, os.path.join(os.getcwd(), 'src'));"
[tool.pylint."MESSAGES CONTROL"]
disable = [
    "attribute-defined-outside-init",
    "consider-iterating-dictionary",
    "fixme",
    "import-error",
    "missing-module-docstring",
    "protected-access",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unnecessary-lambda-assignment",
    "useless-parent-delegation",
    "c-extension-no-member",
    "logging-fstring-interpolation",
    "arguments-differ",
    "invalid-name",
    "not-callable",
    "subprocess-run-check"
]

[tool.hatch.envs.default]
features = ["dev"]
dev-mode = true
installer = "uv"

[tool.uv]
prerelease = "allow"

[tool.hatch.envs.test]
template = "default"

[tool.hatch.envs.test.env-vars]
DEFAULT_USECASE="nss"
PYTHONUTF8 = "1"
PYTHONIOENCODING = "utf-8"

[tool.hatch.envs.test.scripts]
# Download test data
download = "python tests/fetch_huggingface.py"

# Test
unit = "python -m pytest tests/core/unit tests/usecases/{env:USECASE:{env:DEFAULT_USECASE}}/unit tests/scripts"
integration = "python -m pytest tests/core/integration tests/usecases/{env:USECASE:{env:DEFAULT_USECASE}}/integration"
integration-fast = "python -m pytest --fast-test tests/core/integration tests/usecases/{env:USECASE:{env:DEFAULT_USECASE}}/integration"
export = "python -m pytest tests/core/export"
test = [
    "python -m pytest tests/core/unit tests/usecases/{env:USECASE:{env:DEFAULT_USECASE}}/unit tests/scripts",
    "python -m pytest tests/core/integration tests/usecases/{env:USECASE:{env:DEFAULT_USECASE}}/integration",
    "python -m pytest tests/core/export"
]

# Coverage
coverage-check = [
  "python -c \"print('\\nCreating testing coverage report\\n')\"",
  """
  python -m pytest \
    --cov=ng_model_gym \
    --cov-report=term \
    --cov-report=json:coverage.json \
    --cov-report=html:coverage_html \
    --fast-test \
    tests/core/unit \
    tests/core/integration \
    tests/usecases/{env:USECASE:{env:DEFAULT_USECASE}}/unit \
    tests/usecases/{env:USECASE:{env:DEFAULT_USECASE}}/integration \
    tests/core/export \
    tests/scripts \
  """
]

[tool.hatch.envs.default.scripts]
clean                   = "python -m scripts.utils.clean"

[tool.hatch.envs.static-analysis]
skip-install = true
features = ["static-analysis"]

[tool.hatch.envs.static-analysis.scripts]
# Security and compliance checks
bandit-check            = [ "python -c \"print('\\nRunning security checks\\n')\"",
                            "python -m bandit --configfile=pyproject.toml -r -f=html -o=report.html ." ]
blocklint               =   "python -m scripts.utils.run_blocklint"
copyright               = [ "python -c \"print('\\nRunning copyright header check on all files\\n')\"",
                            "python -m reuse lint" ]

# Format
format                  = [ "python -c \"print('\\nFormatting files with black, isort and autoflake\\n')\"",
                            "python -m autoflake --remove-unused-variables --remove-all-unused-imports --ignore-init-module-imports --recursive --in-place .",
                            "python -m isort .",
                            "python -m black src/ scripts/ tests/" ]

# Lint
lint                    =   "python -m scripts.utils.run_pylint --src"
lint-test               =   "python -m scripts.utils.run_pylint --test --disable=invalid-name"
lint-all                =   "python -m scripts.utils.run_pylint"


# Hatch environmment for testing across all supported Python versions
[tool.hatch.envs.test-matrix]
template = "test"
matrix-name-format = "py{value}"

[[tool.hatch.envs.test-matrix.matrix]]
python = ["3.10", "3.11", "3.12"]
